software-center (3.1.16) UNRELEASED; urgency=low

  [ Michael Vogt ]
  * merged lp:~mmcg069/software-center/reviews-and-netstatus
    many thanks to Matthew McGowan
  * test/test_appdetails_view.py:
    - add appdetails netstatus tests
  * merged lp:~aaronp/software-center/fix-694836, many thanks
    (LP: #694836)

  [ Gary Lasker ]
  * softwarecenter/distro/Ubuntu.py,
    softwarecenter/models/appstore.py:
    - fix crash if attempting to download a remote icon before
      the cache is ready (LP: #688991)
  * softwarecenter/models/appstore.py:
    - fix intermittent AttributeError in on_get_value (LP: #712170) 
    - fix attribute error when building a custom list (LP: #712888)
  * test/test_custom_lists.py:
    - add unit test for custom lists 

  [ Aaron Peachey ]
  * view/appdetailsview_gtk.py: 
     - change label to click to write a review if user already has
       a review for that package LP: #709738
     - alter review look if it belongs to current user LP: #710396

  [ Matthew McGowan ]
  * lp:~mmcg069/software-center/tiny-back-forward-tweak:
    - a small tweak to make the arrow in the back-forward button pick 
      a better size across a wider range of gtk themes.

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 07 Feb 2011 10:06:57 +0100

software-center (3.1.15) natty; urgency=low

  [ Kiwinote ]
  * softwarecenter/apt/aptcache.py:
    - don't crash if pkg not in cache (deb files)
  * softwarecenter/utils.py,
    utils/submit_review.py:
    - play slightly nicer with locales (LP: #709671)
  * softwarecenter/view/appdetailsview_gtk:
    - correctly hide addons/reviews from interface when we have an error
  * utils/submit_review.py:
    - allow us to review when spell check isn't available (LP: #709155)
  
  [ Michael Vogt ]
  * softwarecenter/db/reviews.py:
    - fix race in review downloaded watcher (LP: #709548)
  * test/test_utils.py:
    - add test for get_language()
  * softwarecenter/backend/zeitgeist_simple.py: